--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<body>
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero__container">
