--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<body>
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero__container">
             <div class="hero__content">
                 <div class="hero__text-block">
-                    <h1 class="hero__title">СВЕТОДИЗАЙН<br>ДЛЯ ПУБЛИЧНЫХ ПРОСТРАНСТВ</h1>
-                    <p class="hero__description">Делаем проект освещения публичных пространств с расчетом освещения, сценариями и подбором оборудования</p>
+                    <h1 class="hero__title">СВЕТОДИЗАЙН
+                        ДЛЯ ПУБЛИЧНЫХ
+                        ПРОСТРАНСТВ
+                    </h1>
+                    <p class="hero__description">Делаем проект освещения публичных
+                        пространств с расчетом освещения,
+                        сценариями и подбором оборудования
+                    </p>
                 </div>
                 <button class="button button--primary">
                     <span class="button__text">Хочу консультацию</span>
@@ -33,8 +38,14 @@
     <section class="about">
         <div class="about__container">
             <div class="about__content">
-                <p class="about__text about__text--main">светодизайн публичных пространств направлен на создание визуально комфорных и продуманных световых решений</p>
-                <p class="about__text about__text--secondary">Мы работаем с пространством, находим сильные стороны, ставим световые акценты, делаем расчет освещенности и продумываем сценарии освещения</p>
+                <p class="about__text about__text--main">светодизайн публичных пространств
+                    направлен на создание визуально комфорных
+                    и продуманных световых решений
+                    </p>
+                <p class="about__text about__text--secondary">Мы работаем с пространством, находим сильные стороны,
+                    ставим световые акценты, делаем расчет освещенности                    
+                    и продумываем сценарии освещения
+                </p>
             </div>
             <div class="about__gallery">
                 <img src="images/about-image-1.png" alt="О нас" class="about__gallery-image">
@@ -65,7 +76,11 @@
                                 <span class="stage-card__number">1</span>
                                 <h3 class="stage-card__title">Бриф с заказчиком</h3>
                             </div>
-                            <p class="stage-card__text">Выясняем пожелания по свету, стиль и задачи; всё фиксируем и переводим в цифровые параметры</p>
+                            <p class="stage-card__text">Выясняем пожелания по
+                                свету, стиль и задачи; всё 
+                                фиксируем и переводим
+                                в цифровые параметры
+                            </p>
                         </div>
                     </div>
                     <div class="stage-card">
@@ -76,7 +91,11 @@
                                 <span class="stage-card__number">2</span>
                                 <h3 class="stage-card__title">Изучение объекта</h3>
                             </div>
-                            <p class="stage-card__text">Собираем чертежи, визуализации, фото и делаем замеры; строим 3D‑модель помещения</p>
+                            <p class="stage-card__text">Собираем чертежи,
+                                 визуализации, фото
+                                 и делаем замеры; строим
+                                 3D‑модель помещения
+                                </p>
                         </div>
                     </div>
                     <div class="stage-card__image">
@@ -88,9 +107,14 @@
                         <div class="stage-card__body">
                             <div class="stage-card__title-wrapper">
                                 <span class="stage-card__number">3</span>
-                                <h3 class="stage-card__title">Нанесение текстур и подбор света</h3>
+                                <h3 class="stage-card__title">Нанесение текстур
+                                    и подбор света
+                                </h3>
                             </div>
-                            <p class="stage-card__text">Работаем по трём слоям освещения: общий, рабочий и акцентный</p>
+                            <p class="stage-card__text">Работаем по трём слоям 
+                                освещения: общий,
+                                рабочий и акцентный
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -104,9 +128,15 @@
                         <div class="stage-card__body">
                             <div class="stage-card__title-wrapper">
                                 <span class="stage-card__number">4</span>
-                                <h3 class="stage-card__title">Создание сценариев освещения</h3>
+                                <h3 class="stage-card__title">Создание сценариев
+                                    освещения
+                                </h3>
                             </div>
-                            <p class="stage-card__text">Продумываем смену режимов (утро, вечер, вечеринка) и варианты управления</p>
+                            <p class="stage-card__text">Продумываем смену
+                                режимов (утро, вечер,
+                                вечеринка) и варианты 
+                                управления
+                            </p>
                         </div>
                     </div>
                     <div class="stage-card">
@@ -115,9 +145,14 @@
                         <div class="stage-card__body">
                             <div class="stage-card__title-wrapper">
                                 <span class="stage-card__number">5</span>
-                                <h3 class="stage-card__title">Спецификация и передача документов</h3>
+                                <h3 class="stage-card__title">Спецификация
+                                    и передача документов
+                                </h3>
                             </div>
-                            <p class="stage-card__text">Готовим список оборудования, чертежи с планом освещения и отчёт из программы Dialux</p>
+                            <p class="stage-card__text">Готовим список
+                                оборудования, чертежи
+                                с планом освещения
+                                и отчёт из программы Dialux</p>
                         </div>
                     </div>
                     <div class="stage-card">
@@ -128,7 +163,11 @@
                                 <span class="stage-card__number">6</span>
                                 <h3 class="stage-card__title">Юстировка на объекте</h3>
                             </div>
-                            <p class="stage-card__text">Настраиваем и регулируем светильники, проверяем сценарии, сдаём проект заказчику</p>
+                            <p class="stage-card__text"> Настраиваем
+                                и регулируем светильники,
+                                проверяем сценарии,
+                                сдаём проект заказчику
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -144,7 +183,8 @@
                     <div class="pricing__info">
                         <h2 class="pricing__title">Стоимость светодизайна</h2>
                         <div class="pricing__details">
-                            <p class="pricing__text">Минимальные требования для стоимости проекта: обмерный план с расстановкой мебели</p>
+                            <p class="pricing__text">Минимальные требования для стоимости проекта:
+                                обмерный план с расстановкой мебели</p>
                             <p class="pricing__price">30 BYN за 1 м2</p>
                         </div>
                     </div>
@@ -154,15 +194,22 @@
                             <ul class="pricing__list">
                                 <li class="pricing__list-item">
                                     <span class="pricing__list-dot"></span>
-                                    <span class="pricing__list-text">Концепции освещения с предложением различных типов оборудования</span>
+                                    <span class="pricing__list-text">Концепции освещения
+                                    с предложением различных
+                                    типов оборудования
+                                </span>
                                 </li>
                                 <li class="pricing__list-item">
                                     <span class="pricing__list-dot"></span>
-                                    <span class="pricing__list-text">План размещения светильников и электроустановочных изделий</span>
+                                    <span class="pricing__list-text">План размещения светильников
+                                    и электроустановочных изделий
+                                </span>
                                 </li>
                                 <li class="pricing__list-item">
                                     <span class="pricing__list-dot"></span>
-                                    <span class="pricing__list-text">Спецификация и рекомендации по монтажу</span>
+                                    <span class="pricing__list-text">Спецификация и рекомендации
+                                    по монтажу
+                                </span>
                                 </li>
                             </ul>
                         </div>
@@ -182,8 +229,12 @@
     <section class="equipment">
         <div class="equipment__container">
             <div class="equipment__header">
-                <h2 class="equipment__title">Оборудование<br>с которым мы работаем</h2>
-                <p class="equipment__description">В проектах мы закладываем проверенное оборудование от бюджетного до пермиум сегментов</p>
+                <h2 class="equipment__title">Оборудование 
+                    с которым мы работаем
+                </h2>
+                <p class="equipment__description">В проектах мы закладываем проверенное оборудование
+                    от бюджетного до пермиум сегментов
+                </p>
             </div>
             <div class="equipment__gallery">
                 <img src="images/equipment_1.png" alt="Оборудование 1" class="equipment__gallery-image equipment__gallery-image--left">
@@ -198,7 +249,11 @@
         <div class="scenarios__container">
             <div class="scenarios__header">
                 <h2 class="scenarios__title">Сценарии освещения</h2>
-                <p class="scenarios__description">Мы продумываем сценарии освещения, чтобы человек получал максимум комфорта и хороших впечатлений находясь в пространстве. Днем более активно пообедать, вечером расслабелнно поужинать и после ужина попасть в атмосферу уюта, чтобы отдохнуть</p>
+                <p class="scenarios__description">Мы продумываем сценарии освещения, чтобы человек получал
+                    максимум комфорта и хороших впечатлений находясь в пространстве.
+                    Днем более активно пообедать, вечером расслабелнно поужинать
+                    и после ужина попасть в атмосферу уюта, чтобы отдохнуть
+                </p>
             </div>
             <div class="scenarios__gallery">
                 <div class="scenarios__item">
@@ -231,10 +286,21 @@
         <div class="benefits__container">
             <div class="benefits__content">
                 <div class="benefits__text-block">
-                    <p class="benefits__main-text">создаем дизайн освещения, который не только улучшит эстетику помещения, но и повысит безопасность и удобство использования</p>
+                    <p class="benefits__main-text">создаем дизайн освещения,
+                        который не только улучшит
+                        эстетику помещения, но и
+                        повысит безопасность
+                        и удобство использования
+                    </p>
                     <div class="benefits__list">
-                        <p class="benefits__item">Помогаем увеличить средний чек при помощи продуманного освещения в помещении</p>
-                        <p class="benefits__item">Определяем наилучшее расположение светильников в вашем пространстсве</p>
+                        <p class="benefits__item">Помогаем увеличить средний
+                            чек при помощи продуманного
+                            освещения в помещении
+                        </p>
+                        <p class="benefits__item">Определяем наилучшее
+                        расположение светильников 
+                        в вашем пространстсве
+                    </p>
                     </div>
                 </div>
                 <button class="button button--primary">
@@ -244,15 +310,21 @@
             <div class="benefits__gallery">
                 <div class="benefits__gallery-item">
                     <img src="images/tech-plan.png" alt="Технический план" class="benefits__gallery-image">
-                    <p class="benefits__gallery-text">Технический план и концепция</p>
+                    <p class="benefits__gallery-text">Технический план
+                        и концепция
+                        </p>
                 </div>
                 <div class="benefits__gallery-item">
                     <img src="images/dealux-bb3f27.png" alt="Dealux" class="benefits__gallery-image">
-                    <p class="benefits__gallery-text">расстановка<br>света в Dealux</p>
+                    <p class="benefits__gallery-text">расстановка
+                        света в Dealux
+                    </p>
                 </div>
                 <div class="benefits__gallery-item">
                     <img src="images/specifications.png" alt="Спецификации" class="benefits__gallery-image">
-                    <p class="benefits__gallery-text">Спецификации<br>и оборудование</p>
+                    <p class="benefits__gallery-text">Спецификации
+                        и оборудование
+                    </p>
                 </div>
             </div>
         </div>
