fix: mobile styles

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
                         пространств с расчетом освещения,
                         сценариями и подбором оборудования
                     </p>
+                    <p class="hero__description_mobile">Делаем проект освещения
+                        публичных пространств
+                        с расчетом освещения,
+                        сценариями и подбором
+                        оборудования
+                    </p>
                 </div>
                 <button class="button button--primary">
                     <span class="button__text">Хочу консультацию</span>
@@ -41,10 +47,24 @@
                 <p class="about__text about__text--main">светодизайн публичных пространств
                     направлен на создание визуально комфорных
                     и продуманных световых решений
-                    </p>
+                </p>
+                <p class="about__text about__text--main_mobile">светодизайн публичных
+                    пространств
+                    направлен на создание
+                    визуально комфорных
+                    и продуманных
+                    световых решений
+                </p>
                 <p class="about__text about__text--secondary">Мы работаем с пространством, находим сильные стороны,
                     ставим световые акценты, делаем расчет освещенности                    
                     и продумываем сценарии освещения
+                </p>
+                <p class="about__text about__text--secondary_mobile">Мы работаем с пространством,
+                    находим сильные стороны,
+                    ставим световые акценты,
+                    делаем расчет освещенности                    
+                    и продумываем сценарии
+                    освещения
                 </p>
             </div>
             <div class="about__gallery">
@@ -60,6 +80,8 @@
         <div class="stages__container">
             <div class="stages__header">
                 <h2 class="stages__title">Из каких этапов состоит светодизайн?</h2>
+                <h2 class="stages__title_mobile">Из каких этапов
+                    состоит светодизайн?</h2>
                 <p class="stages__subtitle">/Перечень работ</p>
             </div>
             <div class="stages__content">
@@ -77,6 +99,10 @@
                                 фиксируем и переводим
                                 в цифровые параметры
                             </p>
+                            <p class="stage-card__text_mobile">Выясняем пожелания по свету,
+                                стиль и задачи; всё фиксируем 
+                                и переводим в цифровые параметры
+                            </p>
                         </div>
                     </div>
                     <div class="stage-card">
@@ -88,10 +114,14 @@
                                 <h3 class="stage-card__title">Изучение объекта</h3>
                             </div>
                             <p class="stage-card__text">Собираем чертежи,
-                                 визуализации, фото
-                                 и делаем замеры; строим
-                                 3D‑модель помещения
-                                </p>
+                                визуализации, фото
+                                и делаем замеры; строим
+                                3D‑модель помещения
+                            </p>
+                            <p class="stage-card__text_mobile">Собираем чертежи, визуализации,
+                                фото и делаем замеры; строим
+                                3D‑модель помещения
+                            </p>
                         </div>
                     </div>
                     <div class="stage-card__image">
@@ -110,6 +140,10 @@
                             <p class="stage-card__text">Работаем по трём слоям 
                                 освещения: общий,
                                 рабочий и акцентный
+                            </p>
+                            <p class="stage-card__text_mobile">Работаем по трём слоям 
+                                освещения: общий, рабочий
+                                и акцентный
                             </p>
                         </div>
                     </div>
@@ -133,6 +167,10 @@
                                 вечеринка) и варианты 
                                 управления
                             </p>
+                            <p class="stage-card__text_mobile">Продумываем смену
+                                режимов (утро, вечер, вечеринка)
+                                и варианты управления
+                            </p>
                         </div>
                     </div>
                     <div class="stage-card">
@@ -148,7 +186,13 @@
                             <p class="stage-card__text">Готовим список
                                 оборудования, чертежи
                                 с планом освещения
-                                и отчёт из программы Dialux</p>
+                                и отчёт из программы Dialux
+                            </p>
+                            <p class="stage-card__text_mobile">Готовим список
+                                оборудования, чертежи
+                                с планом освещения
+                                и отчёт из программы Dialux
+                            </p>
                         </div>
                     </div>
                     <div class="stage-card">
@@ -160,6 +204,11 @@
                                 <h3 class="stage-card__title">Юстировка на объекте</h3>
                             </div>
                             <p class="stage-card__text"> Настраиваем
+                                и регулируем светильники,
+                                проверяем сценарии,
+                                сдаём проект заказчику
+                            </p>
+                            <p class="stage-card__text_mobile">Настраиваем
                                 и регулируем светильники,
                                 проверяем сценарии,
                                 сдаём проект заказчику
@@ -181,6 +230,10 @@
                         <div class="pricing__details">
                             <p class="pricing__text">Минимальные требования для стоимости проекта:
                                 обмерный план с расстановкой мебели</p>
+                            <p class="pricing__text_mobile">Минимальные требования
+                                для стоимости проекта:
+                                обмерный план
+                                с расстановкой мебели</p>
                             <p class="pricing__price">30 BYN за 1 м2</p>
                         </div>
                     </div>
@@ -228,9 +281,14 @@
                 <h2 class="equipment__title">Оборудование 
                     с которым мы работаем
                 </h2>
-                <p class="equipment__description">В проектах мы закладываем проверенное оборудование
-                    от бюджетного до пермиум сегментов
-                </p>
+                    <p class="equipment__description">В проектах мы закладываем проверенное оборудование
+                        от бюджетного до пермиум сегментов
+                    </p>
+                    <p class="equipment__description_mobile">В проектах мы закладываем
+                        проверенное оборудование
+                        от бюджетного до пермиум
+                        сегментов
+                    </p>
             </div>
             <div class="equipment__gallery">
                 <img src="images/equipment_1.png" alt="Оборудование 1" class="equipment__gallery-image equipment__gallery-image--left">
@@ -249,6 +307,17 @@
                     максимум комфорта и хороших впечатлений находясь в пространстве.
                     Днем более активно пообедать, вечером расслабелнно поужинать
                     и после ужина попасть в атмосферу уюта, чтобы отдохнуть
+                </p>
+                <p class="scenarios__description_mobile">Мы продумываем сценарии
+                    освещения, чтобы человек
+                    получал максимум комфорта
+                    и хороших впечатлений
+                    находясь в пространстве.
+                    Днем более активно пообедать,
+                    вечером расслабелнно
+                    поужинать и после ужина
+                    попасть в атмосферу уюта,
+                    чтобы отдохнуть
                 </p>
             </div>
             <div class="scenarios__gallery">
@@ -288,15 +357,30 @@
                         повысит безопасность
                         и удобство использования
                     </p>
+                    <p class="benefits__main-text_mobile">создаем дизайн
+                        освещения, который
+                        не только улучшит
+                        эстетику помещения, но и
+                        повысит безопасность
+                        и удобство использования
+                    </p>
                     <div class="benefits__list">
                         <p class="benefits__item">Помогаем увеличить средний
+                            чек при помощи продуманного
+                            освещения в помещении
+                        </p>                        
+                        <p class="benefits__item_mobile">Помогаем увеличить средний
                             чек при помощи продуманного
                             освещения в помещении
                         </p>
                         <p class="benefits__item">Определяем наилучшее
                         расположение светильников 
                         в вашем пространстсве
-                    </p>
+                        </p>
+                        <p class="benefits__item_mobile">Определяем наилучшее
+                            расположение светильников 
+                            в вашем пространстсве
+                        </p>
                     </div>
                 </div>
                 <button class="button button--primary">
@@ -325,6 +409,43 @@
             </div>
         </div>
     </section>
+
+    <!-- Modal Form -->
+    <div class="modal" id="contactModal">
+        <div class="modal__overlay"></div>
+        
+        <!-- Form State -->
+        <div class="modal__content modal__content--form" id="modalForm">
+            <button class="modal__close" id="modalClose">Закрыть</button>
+            <div class="modal__header">
+                <h2 class="modal__title">Получить
+                     консультацию по свету</h2>
+                <p class="modal__subtitle">Мы с радостью обсудим ваши идеи и пожелания,
+                    дадим обратную связь в течение 2 часов.</p>
+            </div>
+            <form class="modal__form" id="consultForm">
+                <div class="modal__inputs">
+                    <div class="modal__row">
+                        <input type="text" class="modal__input" placeholder="Ваше имя*" required>
+                        <input type="tel" class="modal__input" placeholder="Введите номер телефона*" required>
+                    </div>
+                    <textarea class="modal__textarea" placeholder="Сообщение.."></textarea>
+                </div>
+                <button type="submit" class="modal__submit">Отправить</button>
+                <p class="modal__privacy">Нажимая на кнопку «Отправить», вы соглашаетесь с условиями нашей политики конфиденциальности*</p>
+            </form>
+        </div>
+
+        <!-- Success State -->
+        <div class="modal__content modal__content--success" id="modalSuccess">
+            <button class="modal__close" id="modalCloseSuccess">Закрыть</button>
+            <div class="modal__success-content">
+                <div class="modal__moon"></div>
+                <h2 class="modal__success-title">Ваша заявка успешно отправлена!</h2>
+                <p class="modal__success-text">Мы уже получили ваше сообщение и скоро свяжемся — обычно это занимает не больше 2 часов. До скорой встречи!</p>
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
