--- a/pages/homes.html
+++ b/pages/homes.html
@@ -137,8 +137,6 @@
 и акцентный</p>
                         </div>
                     </div>
-                </div>
-                <div class="stages__row">
                     <div class="stage-card__image">
                         <img src="../images/stage-image-homes-2.png" alt="Этап работы" class="stage-card__image-img">
                     </div>
@@ -262,10 +260,7 @@
 сегментов</p>
             </div>
             <div class="equipment-homes__gallery">
-                <img src="../images/Rectangle 886.png" alt="Оборудование 1" class="equipment-homes__gallery-image">
-                <img src="../images/Rectangle 887.png" alt="Оборудование 2" class="equipment-homes__gallery-image">
-                <img src="../images/Rectangle 888.png" alt="Оборудование 3" class="equipment-homes__gallery-image">
-                <img src="../images/Rectangle 889.png" alt="Оборудование 4" class="equipment-homes__gallery-image">
+                <img src="../images/equipment-gallery-d4f8a8.png" alt="Оборудование" class="equipment-homes__gallery-image equipment-homes__gallery-image--wide">
             </div>
         </div>
     </section>
