--- a/pages/homes.html
+++ b/pages/homes.html
@@ -33,13 +33,21 @@
     <section class="about-homes">
         <div class="about-homes__container">
             <div class="about-homes__content">
-                <p class="about-homes__text about-homes__text--main">помогаем превратить дом в место, где приятно жить: освещение подстраивается под ваши привычки, создаёт уют и экономит энергию</p>
+                <p class="about-homes__text about-homes__text--main">помогаем превратить дом в место, где приятно
+                    жить: освещение подстраивается под ваши
+                    привычки, создаёт уют и экономит энергию</p>
+                <p class="about-homes__text about-homes__text--tablet">помогаем превратить дом в место, где приятно жить:
+                    освещение подстраивается под ваши привычки,
+                    создаёт уют и экономит энергию</p>
                 <p class="about-homes__text about-homes__text--main_mobile">помогаем превратить дом
 в место, где приятно жить:
 освещение подстраивается
 под ваши привычки, создаёт
 уют и экономит энергию</p>
-                <p class="about-homes__text about-homes__text--secondary">Мы бережно работаем с пространством вашего дома: раскрываем его архитектуру с помощью света, создаём комфортное освещение и продумываем сценарии, которые делают атмосферу живой и динамичной</p>
+                <p class="about-homes__text about-homes__text--secondary">Мы бережно работаем с пространством вашего дома:
+                    раскрываем его архитектуру с помощью света, создаём
+                    комфортное освещение и продумываем сценарии, которые
+                    делают атмосферу живой и динамичной</p>
                 <p class="about-homes__text about-homes__text--secondary_mobile">Мы бережно работаем
 с пространством вашего дома:
 раскрываем его архитектуру
@@ -58,7 +66,8 @@
     <section class="knowhow">
         <div class="knowhow__header">
             <h2 class="knowhow__title">знаем как сделать 
-идеальное освещение в доме вашей мечты</h2>
+идеальное освещение
+в доме вашей мечты</h2>
             <h2 class="knowhow__title_mobile">знаем как сделать 
 идеальное освещение
 в доме вашей мечты</h2>
@@ -206,6 +215,9 @@
                         <div class="pricing__details">
                             <p class="pricing__text">Минимальные требования для стоимости проекта:
 обмерный план с расстановкой мебели</p>
+<p class="pricing__text_tablet">Минимальные требования
+    для стоимости проекта: обмерный
+    план с расстановкой мебели</p>
                             <p class="pricing__text_mobile">Минимальные требования
 для стоимости проекта:
 обмерный план
@@ -251,7 +263,8 @@
     <section class="equipment-homes">
         <div class="equipment-homes__container">
             <div class="equipment-homes__content">
-                <h2 class="equipment-homes__title">Мы работаем на серфицированном и проверенном оборудовании</h2>
+                <h2 class="equipment-homes__title">Мы работаем на серфицированном
+                    и проверенном оборудовании</h2>
                 <p class="equipment-homes__description">В проектах мы закладываем  брендовое оборудование
 от бюджетного до пермиум сегментов</p>
                 <p class="equipment-homes__description_mobile">В проектах мы закладываем
@@ -260,16 +273,39 @@
 сегментов</p>
             </div>
             <div class="equipment-homes__gallery">
-                <img src="../images/equipment-gallery-d4f8a8.png" alt="Оборудование" class="equipment-homes__gallery-image equipment-homes__gallery-image--wide">
+                <img src="../images/equipment-homes1.png" alt="Оборудование 1" class="equipment-homes__gallery-image">
+                <img src="../images/equipment-homes2.png" alt="Оборудование 2" class="equipment-homes__gallery-image">
+                <img src="../images/equipment-homes3.png" alt="Оборудование 3" class="equipment-homes__gallery-image">
+                <img src="../images/equipment-homes4.png" alt="Оборудование 4" class="equipment-homes__gallery-image">
             </div>
-        </div>
-    </section>
-
-    <!-- Equipment Logos Strip -->
-    <section class="equipment-logos">
-        <div class="equipment-logos__container">
-            <div class="equipment-logos__strip">
-                <img src="../images/equipment-full-d4f8a8.png" alt="Логотипы брендов освещения" class="equipment-logos__logo">
+            <div class="equipment-homes__logos">
+                <div class="equipment-homes__logos-strip">
+                    <img src="../images/Maytoni.png" alt="Maytoni" class="equipment-homes__logos-logo">
+                    <img src="../images/ST LUCE.png" alt="ST LUCE" class="equipment-homes__logos-logo">
+                    <img src="../images/центрсвет.png" alt="Центрсвет" class="equipment-homes__logos-logo equipment-homes__logos-logo--small">
+                    <img src="../images/arlight.png" alt="Arlight" class="equipment-homes__logos-logo">
+                    <img src="../images/LEDS C4.png" alt="LEDS C4" class="equipment-homes__logos-logo">
+                    <img src="../images/davide groppi.png" alt="Davide Groppi" class="equipment-homes__logos-logo">
+                    <img src="../images/Aleda.png" alt="Aleda" class="equipment-homes__logos-logo equipment-homes__logos-logo--small">
+                    <img src="../images/Artemide.png" alt="Artemide" class="equipment-homes__logos-logo">
+                    <img src="../images/FLOS.png" alt="FLOS" class="equipment-homes__logos-logo">
+                    <img src="../images/JUNG.png" alt="JUNG" class="equipment-homes__logos-logo">
+                    <img src="../images/Axelight.png" alt="Axelight" class="equipment-homes__logos-logo">
+                    <img src="../images/DELTAlight.png" alt="DELTAlight" class="equipment-homes__logos-logo">
+                    <!-- Дублируем для бесконечной прокрутки -->
+                    <img src="../images/Maytoni.png" alt="Maytoni" class="equipment-homes__logos-logo">
+                    <img src="../images/ST LUCE.png" alt="ST LUCE" class="equipment-homes__logos-logo">
+                    <img src="../images/центрсвет.png" alt="Центрсвет" class="equipment-homes__logos-logo equipment-homes__logos-logo--small">
+                    <img src="../images/arlight.png" alt="Arlight" class="equipment-homes__logos-logo">
+                    <img src="../images/LEDS C4.png" alt="LEDS C4" class="equipment-homes__logos-logo">
+                    <img src="../images/davide groppi.png" alt="Davide Groppi" class="equipment-homes__logos-logo">
+                    <img src="../images/Aleda.png" alt="Aleda" class="equipment-homes__logos-logo equipment-homes__logos-logo--small">
+                    <img src="../images/Artemide.png" alt="Artemide" class="equipment-homes__logos-logo">
+                    <img src="../images/FLOS.png" alt="FLOS" class="equipment-homes__logos-logo">
+                    <img src="../images/JUNG.png" alt="JUNG" class="equipment-homes__logos-logo">
+                    <img src="../images/Axelight.png" alt="Axelight" class="equipment-homes__logos-logo">
+                    <img src="../images/DELTAlight.png" alt="DELTAlight" class="equipment-homes__logos-logo">
+                </div>
             </div>
         </div>
     </section>
@@ -279,7 +315,9 @@
         <div class="scenarios-homes__container">
             <div class="scenarios-homes__header">
                 <h2 class="scenarios-homes__title">Сценарии освещения</h2>
-                <p class="scenarios-homes__description">Мы создаём световые сценарии, которые подстраиваются под ваш ритм жизни — яркий и энергичный свет для продуктивного дня, мягкий и тёплый для спокойного вечера и отдыха</p>
+                <p class="scenarios-homes__description">Мы создаём световые сценарии, которые подстраиваются под ваш
+                    ритм жизни — яркий и энергичный свет для продуктивного дня, мягкий
+                    и тёплый для спокойного вечера и отдыха</p>
                 <p class="scenarios-homes__description_mobile">Мы создаём световые сценарии,
 которые подстраиваются под ваш
 ритм жизни — яркий и энергичный
@@ -318,22 +356,26 @@
         <div class="benefits__container">
             <div class="benefits__content">
                 <div class="benefits__text-block">
-                    <p class="benefits__main-text">Мы создаём свет, который делает дом уютным, комфортным и безопасным. 
-Свет в доме работает на ваш 
-комфорт и привычки</p>
+                    <p class="benefits__main-text">Мы создаём свет, который
+                        делает дом уютным,
+                        комфортным и безопасным. 
+                        Свет в доме работает на ваш 
+                        комфорт и привычки</p>
                     <p class="benefits__main-text_mobile">Мы создаём свет, который
 делает дом уютным,
 комфортным и безопасным.
 Свет в доме работает
 на ваш комфорт и привычки</p>
                     <div class="benefits__list">
-                        <p class="benefits__item">Помогаем создать атмосферу уюта в вашем доме для отдыха 
-и ощущения безопастности</p>                        
+                        <p class="benefits__item">Помогаем создать атмосферу
+                            уюта в вашем доме для отдыха 
+                            и ощущения безопастности</p>                        
                         <p class="benefits__item_mobile">Помогаем создать атмосферу
-уюта в вашем доме для отдыха
-и ощущения безопастности</p>
-                        <p class="benefits__item">Определяем наилучшее расположение светильников 
-в вашем пространстве</p>
+                        уюта в вашем доме для отдыха
+                        и ощущения безопастности</p>
+                        <p class="benefits__item">Определяем наилучшее
+                            расположение светильников 
+                            в вашем пространстве</p>
                         <p class="benefits__item_mobile">Определяем наилучшее
 расположение светильников 
 в вашем пространстве</p>
