--- a/pages/spaces.html
+++ b/pages/spaces.html
@@ -229,7 +229,11 @@
                         <h2 class="pricing__title">Стоимость светодизайна</h2>
                         <div class="pricing__details">
                             <p class="pricing__text">Минимальные требования для стоимости проекта:
-                                обмерный план с расстановкой мебели</p>
+                                обмерный план с расстановкой мебели</p>                                
+                            <p class="pricing__text_tablet">Минимальные требования
+                                для стоимости проекта:
+                                обмерный план
+                                с расстановкой мебели</p>
                             <p class="pricing__text_mobile">Минимальные требования
                                 для стоимости проекта:
                                 обмерный план
